--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             authDomain: "leo-microtask10.firebaseapp.com",
             databaseURL: "https://leo-microtask10-default-rtdb.firebaseio.com",
             projectId: "leo-microtask10",
-            storageBucket: "leo-microtask10.firebasestorage.app",
+            storageBucket: "leo-microtask10.firebasestorage.com",
             messagingSenderId: "641212738765",
             appId: "1:641212738765:web:320c12246de0a44dbd0d84",
         };
